fixed dropdown menus and spacing

--- a/public/pages/program-detail.html
+++ b/public/pages/program-detail.html
@@ -12,69 +12,71 @@
 </head>
 
 <body>
-  <div class="container-fluid">
-    <div class="detail-nav search-nav row border align-items-center">
-      <div class="col" style="margin-left: 215px; padding-left: 0px;">
-        <nav class="navbar navbar-default border-0">
-          <button class="navbar-toggler border-0" type="button" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-      </div>
-      <div class="col"></div>
-      <div class="col search-membership-buttons-container mr-5">
-        <form class="form-inline">
-          <div class="col-auto px-0">
-            <button class="btn border nav-link px-3 rounded-0 search-membership-buttons light-montserrat text-uppercase">
-              Join
-            </button>
-          </div>
-          <div class="col-auto px-0">
-            <button class="btn nav-link border-0 rounded-0 search-membership-buttons light-montserrat text-uppercase">
-              Login
-            </button>
-          </div>
-        </form>
-        </nav>
+  <div class="search-nav row border align-items-center">
+    <div class="col-auto" style="margin-left: 211px; margin-right: 460px;">
+      <div style="height: 15px; width: 18px; padding: 0px;">
+        <div class="icon-bar" style="height: 1px !important; border-radius: 1px;"></div>
+        <div class="icon-bar" style="height: 1px !important; border-radius: 1px;"></div>
+        <div class="icon-bar" style="height: 1px !important; border-radius: 1px;"></div>
       </div>
     </div>
+    <div class="col-auto search-logo" style="width: 200px; margin-right: 210px; padding-left: 78px !important;"></div>
+    <div class="col" style="font-family:'Monserrat' 'sans-serif';">
+      <form class="form-inline">
+        <div class="col-auto px-0">
+          <button class="btn border nav-link px-3 rounded-0 search-membership-buttons light-montserrat text-uppercase" style="font-size: 8pt;  font-weight: 100; padding: 0px 14px; color: rgb(177,177,177)">
+              Join
+            </button>
+        </div>
+        <div class="col-auto px-0">
+          <button class="btn nav-link border-0 rounded-0 search-membership-buttons light-montserrat text-uppercase" style="font-size: 8pt; font-weight: 100;  color: rgb(177,177,177); padding: 0 18px 0 12px;">
+              Login
+            </button>
+        </div>
+      </form>
+    </div>
   </div>
-  <div class="detail-container" style="width: 1182px !important; max-width: 1182 !important; margin-left: 245px;">
+  <div class="detail-container" style="width: 1182px !important; max-width: 1182 !important; margin-left: 215px;">
     <div class="row" style="margin-bottom: 30px">
       <form style:"width: 1162px;">
         <div class="form-row align-items-center px-auto mx-auto">
-          <div class="form-group col-auto px-0" style="width: 170px; margin-left: 15px; margin-right: 25px;">
-            <label class="light-montserrat text-uppercase" for="inputSport">Sport</label>
-            <select id="inputSport" class="detail-search-input light-montserrat form-control" style="letter-spacing: 0pt; border-radius: 2px !important;">
-              <option class="light-montserrat" selected>Soccer</option>
-              <option>...</option>
-            </select>
+          <div class="form-group col-auto dropdown px-0" style="width: 170px !important; margin: 0 28px 0 15px;">
+            <label for="inputSport" class="text-uppercase light-montserrat" style="letter-spacing: 1.4px; font-size: 9pt;">Sport</label>
+            <button id="inputSport" class="form-control align-text-left detail-search-input-dropdown light-montserrat" style="text-align: left; padding: 15px 10px 15px 20px; border-radius: 1px !important;">
+              <span class="dropdown-label">Soccer</span>
+            </button>
+            <ul class="dropdown-menu">
+              <li>...</li>
+              <li>...</li>
+            </ul>
           </div>
-          <div class="form-group col-auto px-0" style="width: 170px; margin-right: 25px;">
-            <label class="light-montserrat text-uppercase" for="inputType">Type</label>
-            <select id="inputType" class="detail-search-input form-control light-montserrat" style="letter-spacing: 0pt; border-radius: 2px !important;">
-            <option selected>Camps</option>
-            <option>...</option>
-          </select>
+          <div class="form-group col-auto dropdown px-0" style="width: 170px !important; margin: 0 28px 0 0;">
+            <label for="inputType" class="text-uppercase light-montserrat" style="letter-spacing: 1.4px; font-size: 9pt; ">Type</label>
+            <button id="inputType" class="form-control align-text-left detail-search-input-dropdown light-montserrat" style="text-align: left; padding: 15px 10px 15px 20px; border-radius: 2px !important;">
+              <span class="dropdown-label">Camps</span>
+            </button>
+            <ul class="dropdown-menu">
+              <li>...</li>
+              <li>...</li>
+            </ul>
           </div>
-          <div class="form-group col-auto px-0" style="width: 170px; margin-right: 25px;">
+          <div class="form-group col-auto px-0" style="width: 170px; margin-right: 28px;">
             <label class="light-montserrat text-uppercase" for="inputZip" placeholder="95124">Location</label>
-            <input type="text" class="form-control detail-search-input light-montserrat" style="letter-spacing: 0pt; border-radius: 2px;" id="inputZip">
+            <input type="text" class="form-control detail-search-input light-montserrat" style="letter-spacing: 0pt; border-radius: 2px;" id="inputZip" placeholder="95124">
           </div>
-          <div class="form-group col-auto px-0" style="width: 170px; margin-right: 25px;">
+          <div class="form-group col-auto px-0" style="width: 170px; margin-right: 23px;">
             <label class="light-montserrat text-uppercase" for="inputDate">Start Date</label>
-            <input type="date" class="form-control text-uppercase detail-search-input light-montserrat" style="letter-spacing: 0pt; border-radius: 2px;" id="inputDate">
+            <input type="text" class="form-control text-uppercase detail-search-input light-montserrat" style="letter-spacing: 0pt; border-radius: 2px;" id="inputDate" placeholder="MM/DD/YYYY">
           </div>
           <div class="col-3" style="padding-top: 15px;">
-            <button class="btn btn-cinch rounded text-uppercase light-montserrat" style="width: 390px; letter-spacing: 1.2pt; padding: 15px 0px; border-radius: 2px !important;">Search</button>
+            <button class="btn btn-cinch rounded text-uppercase light-montserrat" style="font-size: 9pt; width: 370px; letter-spacing: 1.2pt; padding: 15px 0px; border-radius: 2px !important;">Search</button>
           </div>
         </div>
       </form>
     </div>
     <div class="row">
-      <div class="container col">
-        <div class="card mb-3 detail-program-detail" style="width: 755px; border-radius: 0px;">
+      <div class="container col" style="padding-right: 13px;">
+        <div class="card mb-3 detail-program-detail" style="width: 764px; border-radius: 0px;">
           <div class="card-body text-center">
             <img src="../images/Arsenal_FC.svg.png" style="margin-top: 15px;" alt="Arsenal">
             <p class="card-title light-montserrat text-uppercase pt-4">Arsenal FC</p>
@@ -83,7 +85,7 @@
             <p class="card-text xlight-montserrat" style="font-weight: 200;margin-bottom: 8px; color: rgb(127,127,127);letter-spacing: .5pt; font-size: 10pt; padding: 0px 40px;">July 20-24 9am-3pm</p>
             <p class="card-text xlight-montserrat" style="font-weight: 200;margin-bottom: 8px; color: rgb(127,127,127);letter-spacing: .5pt; font-size: 10pt; padding: 0px 40px;">Ages 5-14</p>
             <p class="card-text xlight-montserrat" style="font-weight: 200;margin-bottom: 8px; color: rgb(127,127,127);letter-spacing: .5pt; font-size: 10pt; padding: 0px 40px;">@ Mirasol Park</p>
-            <p class="card-text xlight-montserrat" style="font-weight: 200;margin-bottom: 8px; color: rgb(127,127,127);letter-spacing: .1pt; font-size: 13pt; padding: 20px 15px;">Through our exclusive partnership with Arsenal, our Elite Soccer camps give players unique and privileged access to some
+            <p class="card-text xlight-montserrat" style="font-weight: 200;margin-bottom: 8px; color: rgb(127,127,127);letter-spacing: .2pt; font-size: 13pt; padding: 20px 15px;">Through our exclusive partnership with Arsenal, our Elite Soccer camps give players unique and privileged access to some
             of the best coaches and coaching methods in the modern game. Players will improve their technical ability through
             tried and trusted drills, exercises and scrimmages based on the same philosophy used by the clubs themselves, all
             under the watchful eye of official Arsenal soccer coaches.</p>
@@ -91,53 +93,53 @@
             technical and physical ability. Together with players from all over the US and around the world players hone their
             skills in a fun and supportive environment for a rewarding experience for all. Kick off your summer with us and
             go home a better player!</p>
-            <p class="card-text light-montserrat" style="font-size: 16pt; padding-bottom: 20px;"> $599</p>
-            <button class="btn btn-cinch radius-0 light-montserrat text-uppercase" style=" color: rgb(200,200,200); font-weight: 100; width: 232px; padding: 15px 0px; border-radius: 2px;"> Register</button>
+            <p class="card-text light-montserrat" style="font-size: 14pt; padding-bottom: 20px; padding-right: 6px; letter-spacing: 1.5pt;"> $599</p>
+            <button class="btn btn-cinch radius-0 light-montserrat text-uppercase" style="color: rgb(200,200,200); font-weight: 100; width: 232px; padding: 15px 0px; border-radius: 2px; font-size: 9pt; letter-spacing: 1.2pt;"> Register</button>
           </div>
         </div>
       </div>
       <div class="col detail-location-group">
         <ul class="list-group">
-          <li class="list-group-item mb-3" style="width: 390px; border-radius: 2px;">
+          <li class="list-group-item mb-3" style="width: 370px; border-radius: 2px;">
             <div class="row align-items-center" >
-              <div class="col-auto" style="margin-right: 30px; width: 80px;">
-                <img src="../images/Arsenal_FC.svg.png" alt="Arsenal" style="height: 75px;">
+              <div class="col-auto" style="margin-right: 30px; width: 75px; padding-left: 19px;">
+                <img src="../images/Arsenal_FC.svg.png" alt="Arsenal" style="height: 70px;">
               </div>
-              <div class="col-8">
-                <div class="row xlight-montserrat text-muted" style="font-size: 14pt;">
+              <div class="col-8" style="padding-left: 14px; color: rgba(0,0,0, .5); font-weight: 100">
+                <div class="row xlight-montserrat" style="font-size: 14pt;">
                   Winter ID Camp
                 </div>
-                <div class="row light-montserrat text-muted text-uppercase" style="font-size: 9pt;">
-                  Jan 24-28 @ Stub hub center
+                <div class="row light-montserrat text-uppercase" style="font-size: 9pt; letter-spacing: .9pt;">
+                  Jan. 24-28 @ Stub hub center
                 </div>
               </div>
             </div>
           </li>
-          <li class="list-group-item my-3 justify-content-center" style="width: 390px; border-radius: 2px;">
+          <li class="list-group-item my-3 justify-content-center" style="width: 370px; border-radius: 2px;">
             <div class="row align-items-center" >
-              <div class="col-auto" style="margin-right: 30px; width: 80px;">
-                <img src="../images/Arsenal_FC.svg.png" alt="Arsenal" style="height: 75px;">
+              <div class="col-auto" style="margin-right: 30px; width: 75px; padding-left: 19px;">
+                <img src="../images/Arsenal_FC.svg.png" alt="Arsenal" style="height: 70px;">
               </div>
-              <div class="col-8">
-                <div class="row xlight-montserrat text-muted" style="font-size: 14pt;">
+              <div class="col-8" style="padding-left: 14px; color: rgba(0,0,0, .5); font-weight: 100">
+                <div class="row xlight-montserrat" style="font-size: 14pt;">
                   Miami Beach ID Camp
                 </div>
-                <div class="row light-montserrat text-muted text-uppercase" style="font-size: 9pt;">
+                <div class="row xlight-montserrat text-uppercase" style="font-size: 9pt; letter-spacing: .9pt;">
                   JUN 16-18 @ miami beach
                 </div>
               </div>
             </div>
           </li>
-          <li class="list-group-item my-3" style="width: 390px; border-radius: 2px;">
+          <li class="list-group-item my-3" style="width: 370px; border-radius: 2px;">
             <div class="row align-items-center" >
-              <div class="col-auto" style="margin-right: 30px; width: 80px;">
-                <img src="../images/Arsenal_FC.svg.png" alt="Arsenal" style="height: 75px;">
+              <div class="col-auto" style="margin-right: 30px; width: 75px; padding-left: 19px;">
+                <img src="../images/Arsenal_FC.svg.png" alt="Arsenal" style="height: 70px;">
               </div>
-              <div class="col-8">
-                <div class="row xlight-montserrat text-muted" style="font-size: 14pt;">
+              <div class="col-8" style="padding-left: 14px; color: rgba(0,0,0, .5); font-weight: 100">
+                <div class="row xlight-montserrat" style="font-size: 14pt;">
                   California ID Camp
                 </div>
-                <div class="row light-montserrat text-muted text-uppercase" style="font-size: 9pt;">
+                <div class="row light-montserrat text-uppercase" style="font-size: 9pt; letter-spacing: .9pt;">
                   may 15-19 @ SDSU
                 </div>
               </div>
