--- a/public/pages/search-results.html
+++ b/public/pages/search-results.html
@@ -41,19 +41,25 @@
     <div class="row" style="margin-bottom: 44px;">
       <form style="width: 1200px;">
         <div class="form-row align-items-center">
-          <div class="form-group col-auto ml-0" style="width: 179px !important; margin: 0 16px;">
+          <div class="form-group dropdown col-auto ml-0" style="width: 179px !important; margin: 0 16px;">
             <label for="inputSport" class="text-uppercase light-montserrat" style="letter-spacing: 1.4px; font-size: 9pt;">Sport</label>
-            <select id="inputSport" class="form-control detail-search-input light-montserrat" style="padding: 15px 10px 15px 20px; border-radius: 1px !important;" >
-                <option selected>Soccer</option>
-                <option>...</option>
-              </select>
+            <button id="inputSport" class="form-control align-text-left detail-search-input-dropdown light-montserrat" style="text-align: left; padding: 15px 10px 15px 20px; border-radius: 1px !important;" >
+              <span class="dropdown-label">Soccer</span>
+            </button>
+              <ul class="dropdown-menu">
+                <li>...</li>
+                <li>...</li>
+              </ul>
           </div>
-          <div class="form-group col-auto px-0" style="width: 171px !important; margin: 0 17px;">
+          <div class="form-group dropdown col-auto px-0" style="width: 171px !important; margin: 0 17px;">
             <label for="inputType" class="text-uppercase light-montserrat" style="letter-spacing: 1.4px; font-size: 9pt; ">Type</label>
-            <select id="inputType" class="form-control detail-search-input light-montserrat" style="padding: 15px 10px 15px 20px; border-radius: 2px !important;" >
-              <option selected>Camps</option>
-              <option>...</option> 
-            </select>
+            <button id="inputType" class="form-control align-text-left detail-search-input-dropdown light-montserrat" style="text-align: left; padding: 15px 10px 15px 20px; border-radius: 2px !important;" >
+              <span class="dropdown-label">Camps</span>
+            </button>
+              <ul class="dropdown-menu">
+                <li>...</li>
+                <li>...</li> 
+              </ul>
           </div>
           <div class="form-group col-auto px-0" style="width: 170px !important; margin:0 16px;">
             <label for="inputCity" class="text-uppercase light-montserrat" style="letter-spacing: 1.4px; font-size: 9pt; ">Location</label>
@@ -61,7 +67,7 @@
           </div>
           <div class="form-group col-auto px-0" style="width: 170px !important; margin:0 14px 0 12px;">
             <label for="inputZip" class="text-uppercase light-montserrat" style="letter-spacing: 1.4px; font-size: 9pt; ">Start Date</label>
-            <input type="date" class="form-control detail-search-input light-montserrat text-uppercase"  style="padding-left: 10px; color: rgb(155,155,155); padding: 15px 10px 15px 20px; letter-spacing: 0px;" id="inputZip">
+            <input type="text" class="form-control detail-search-input light-montserrat text-uppercase"  style="padding-left: 10px; color: rgb(155,155,155); padding: 15px 10px 15px 20px; letter-spacing: 0px;" id="inputZip" placeholder="MM/DD/YYYY">
           </div>
           <div class="col-3 pt-3" style="margin:12px 0px 20px 18px; padding-left: 0px;">
             <button class="btn btn-cinch text-uppercase" style="color: white; width: 232px; border-radius: 2px; margin-top: 16px; padding: 15px 0px; letter-spacing: 1.4px; font-size: 9pt; font-weight: 100;">Search</button>
@@ -70,25 +76,25 @@
       </form>
     </div>
     <div class="row align-items-center text-center border" style="width: 1300px !important; padding: 35px 10px 35px 34px;">
-      <div class="col-auto" style="width: 148px !important; margin-top:5px; margin-left: 2px;">
+      <div class="col-auto" style="width: 148px !important; margin-top:5px; padding-left: 11px;">
         <div class="row m-0">
-          <img style="height: 95px; width: 80px;"src="../images/Arsenal_FC.svg.png">
+          <img style="height: 87px; width: 73px;"src="../images/Arsenal_FC.svg.png">
         </div>
         <div class="row py-2">
           <span class="text-uppercase light-montserrat text-nowrap" style="font-size: 10pt; letter-spacing: 1.6px;">ARSENAL FC</span>
         </div>
       </div>
-      <div class="col-auto align-items-center" style="margin: 0px 28px 0px 2px;  padding: 0px 18px 0px 44px">
-        <div class="row justify-content-center text-uppercase" style="font-size: 14pt; letter-spacing: 2pt;">
+      <div class="col-auto align-items-center" style="margin: 0px 24px 0px 0px;  padding: 0px 18px 0px 40px">
+        <div class="row justify-content-center text-uppercase light-montserrat" style="font-size: 14pt; letter-spacing: 2.2pt;">
           <p class="m-0">Soccer Camp</p>
         </div>
-        <div class="row justify-content-center mb-0" style="color: rgba(0, 0, 0, .6); font-size: 10pt; padding-bottom: 0px; height: 30px; margin-top: 10px; font-weight: 400;">
+        <div class="row justify-content-center mb-0 xlight-montserrat" style="color: rgba(0, 0, 0, .6); font-size: 10pt; padding-bottom: 0px; height: 30px; margin-top: 10px; font-weight: 400; letter-spacing: .2pt">
           <p>July 20-24 9am-3pm </p>
         </div>
-        <div class="row justify-content-center mb-0" style="color: rgba(0, 0, 0, .6); font-size: 10pt; padding-bottom: 0px; height: 30px; font-weight: 400;">
+        <div class="row justify-content-center mb-0 xlight-montserrat" style="color: rgba(0, 0, 0, .6); font-size: 10pt; padding-bottom: 0px; height: 30px; font-weight: 400; letter-spacing: .2pt">
           <p>Ages 5-14 </p>
         </div>
-        <div class="row justify-content-center mb-0" style="color: rgba(0, 0, 0, .6); font-size: 10pt; padding-bottom: 0px; height: 30px; font-weight: 400;">
+        <div class="row justify-content-center mb-0 xlight-montserrat" style="color: rgba(0, 0, 0, .6); font-size: 10pt; padding-bottom: 0px; height: 30px; font-weight: 400; letter-spacing: .2pt">
           <p>@ Mirasol Park </p>
         </div>
       </div>
