--- a/public/pages/homepage.html
+++ b/public/pages/homepage.html
@@ -12,24 +12,24 @@
 <body>
   <div class="container-fluid homepage-background bg-dark img-fluid">
     <nav class="homepage-navbar navbar navbar-expand-lg row py-5 offset-md-1 justify-content-center">
-      <div class="col px-0">
-        <a href="#" class="navbar-brand align-self-center mx-5">
+      <div class="col-auto px-0" style="margin-left: 76px;">
+        <a href="#" class="navbar-brand align-self-center">
           <img src="../images/cinch(white).png" alt="Cinch Logo">
         </a>
       </div>
-      <div class=" d-flex flex-column collapse navbar-collapse col-5 justify-content-around" style="padding-left: 0px; margin-right: 30px;">
-        <div class="navbar-nav" style="padding-left: 0px;">
-          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light light-montserrat text-uppercase" href="#" style="margin-left: 0px;">Home</a>
-          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light light-montserrat text-uppercase" href="#">Features</a>
-          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light light-montserrat text-uppercase" href="#">Products</a>
+      <div class=" d-flex flex-column collapse navbar-collapse col-auto justify-content-around" style="padding: 0px; margin-left: 253px;">
+        <div class="navbar-nav" style="padding-left: 8px; margin-right: 12px;">
+          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light xlight-montserrat text-uppercase" href="#" style="padding-left: 14px; letter-spacing: 1.2px; font-size: 9pt; margin: 0px 22px 0px 0px;">Home</a>
+          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light xlight-montserrat text-uppercase" href="#" style="letter-spacing: 1.2px; font-size: 9pt; margin-left: 40px; padding-left: 4px;">Features</a>
+          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light xlight-montserrat text-uppercase" href="#" style="letter-spacing: 1.2px; font-size: 9pt; margin-right:4px;padding-left: 4px; padding-right: 14px;">Products</a>
         </div>
       </div>
-      <form class="form-inline col">
-        <button class="btn btn-light px-5 nav-link border-0 light-montserrat text-uppercase" style="height: 40px; width: 144px; border-radius: 2px;">Join</button>
-        <button class="btn btn-outline-light px-5 nav-link border-0 rounded-0 light-montserrat text-uppercase" style="height: 40px; width: 144px;">login</button>
+      <form class="form-inline col-auto pr-0" style="padding-left: 50px; left: 6px;">
+        <button class="btn btn-light nav-link border-0 xlight-montserrat text-uppercase" style="margin-left: 86px; height: 40px; width: 144px; border-radius: 2px; font-size: 9pt; letter-spacing: .7pt;">Join</button>
+        <button class="btn btn-outline-light nav-link border-0 rounded-0 xlight-montserrat text-uppercase" style="height: 40px; width: 144px; font-size: 9pt; letter-spacing: .7pt;">login</button>
       </form>
     </nav>
-    <div class="container justify-content-center text-center" style="margin-top: 125px">
+    <div class="col-auto justify-content-center text-center" style="margin-top: 125px; margin-left: 195px; ">
       <div class="row">
         <div class="col homepage-tagline"> 
           <h1 class="homepage-tagline text-white">Welcome to</h1>
@@ -46,17 +46,17 @@
             <div class="col-auto rounded my-3" style="padding: 0px .5px; width: 385px !important;">
               <input type="text" class="homepage-form-input form-control" placeholder="Organization Name">
             </div>
-            <div class="col-auto rounded my-3" style="padding: 0px .5px; width: 270px;">
+            <div class="col-auto rounded my-3" style="padding: 0px .5px; width: 249px;">
               <input type="text" class="homepage-form-input form-control" placeholder="Select Sport">
             </div>
-            <div class="col rounded my-3" style="padding: 0px .5px; width: 170px !important;">
+            <div class="col-auto rounded my-3" style="padding: 0px .5px; width: 168px !important;">
               <input type="text" class="homepage-form-input form-control" placeholder="Activity Type">
             </div>
-            <div class="col rounded my-3 " style="padding: 0px .5px; margin-left: .5px;">
-              <input type="text" class="homepage-form-input form-control" style="width: 150px !important;" placeholder="City or Zip">
+            <div class="col-auto rounded my-3 " style="padding: 0px .5px; margin-left: .5px;">
+              <input type="text" class="homepage-form-input form-control" style="width: 140px !important;" placeholder="City or Zip">
             </div>
+          <button class="col-auto submit btn my-4 text-uppercase xlight-montserrat homepage-search-btn" style="width: 336px; border-radius: 2px; margin-right: 25px; margin-left: 302px; font-size: 10pt; letter-spacing: .7pt; font-size: 9pt; padding-left: 12px;" type="submit">Search</button>
           </div>
-          <button class="submit btn my-4 text-uppercase xlight-montserrat homepage-search-btn" style="border-radius: 2px; margin-right: 25px; font-size: 10pt;" type="submit">Search</button>
         </form>
       </div>
     </div>
