register country input changes

--- a/public/pages/register.html
+++ b/public/pages/register.html
@@ -58,12 +58,22 @@
             <label class="light-montserrat text-uppercase register-input-label" for="inputCity">State</label>
             <input type="text" class="register-input-text light-montserrat form-control" placeholder="Your State">
           </div>
-          <div class="form-group col-md-6 pl-3">
+          <!--<div class="form-group col-md-6 pl-3">
             <label class="light-montserrat text-uppercase register-input-label" for="inputState">Country</label>
             <select id="inputState" class="form-control register-input-text" style="height: 50px !important;">
               <option selected>United States</option>
               <option>...</option>
             </select>
+          </div>-->
+          <div class="form-group col-md-6 pl-3 dropdown" style="width: 240px !important;">
+            <label for="inputSport" class="text-uppercase light-montserrat" style="letter-spacing: 1.4px; font-size: 9pt;">Country</label>
+            <button id="inputSport" class="form-control align-text-left register-input-text detail-search-input-dropdown light-montserrat" style="text-align: left; padding: 15px 10px 15px 20px; border-radius: 3px !important;">
+              <span class="dropdown-label" style="color: rgba(0, 0, 0, .2)">United States</span>
+            </button>
+            <ul class="dropdown-menu">
+              <li>...</li>
+              <li>...</li>
+            </ul>
           </div>
         </div>
         <div class="form-group">
